# raider

./: .buildconfig  .editorconfig  .gitignore  BUILD.md  README.md  Raider.cbp  Raider.layout  SECURITY.md  com.github.ADBeveridge.Raider.json  com.github.ADBeveridge.Raider.json~  meson.build  meson_options.txt  org.gnome.Raider.json  raider.doap
.flatpak/repo/: metadata
.github/workflows/: codeql-analysis.yml  codeql.yml  flawfinder-analysis.yml  flawfinder.yml
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  raider-config.h
builddir/data/: com.github.ADBeveridge.Raider.appdata.xml  com.github.ADBeveridge.Raider.desktop  org.gnome.Raider.appdata.xml  org.gnome.Raider.desktop
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: install-log.txt  meson-log.txt
builddir/meson-private/: coredata.dat.prev
builddir/src/: raider  raider-resources.c  raider-resources.h
builddir/src/theme/: theme-resources.c  theme-resources.h
corrupt/: README.md  meson.build
corrupt/include/: corrupt.h
corrupt/src/: bucket.c  bucket.h  corrupt.c  utility.c  utility.h
data/: com.github.ADBeveridge.Raider.appdata.xml.in  com.github.ADBeveridge.Raider.desktop  com.github.ADBeveridge.Raider.desktop.in  com.github.ADBeveridge.Raider.desktop.in.in  com.github.ADBeveridge.Raider.gschema.xml  com.github.ADBeveridge.Raider.metainfo.xml  com.github.ADBeveridge.Raider.metainfo.xml.in.in  com.github.ADBeveridge.Raider.service.in  com.github.ADBeveridge.raider.gschema.xml  meson.build  org.gnome.Raider.appdata.xml.in  org.gnome.Raider.desktop.in  org.gnome.Raider.gschema.xml
data/icons/: meson.build
docs/: meson.build  raider.1
help/: LINGUAS  meson.build  template.mo  template.pot
help/C/: archive-create.page  archive-edit.page  archive-extract-advanced-options.page  archive-extract.page  archive-open.page  archive-view.page  configuring-advanced-options.page  configuring-basic-options.page  index.page  introduction.page  keyboard-shortcuts.page  last-output.page.stub  legal.xml  load-file.page  password-protection.page  shred-file.page  supported-formats.page  test-integrity.page  troubleshooting-archive-open.page  troubleshooting-password.page  troubleshooting-shredding.page
help/es/: es.po
help/it/: it.mo  it.po
help/ru/: ru.po  ru.pot
nautilus/: meson.build  nautilus-raider.c
po/: LINGUAS  POTFILES  README.md  ar.po  be.po  bg.po  ca.po  com.github.ADBeveridge.Raider.pot  cs.po  de.mo  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  it.po  it_IT.po  ka.po  kk.po  kw.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sl_SI.mo  sl_SI.po  sr.po  sv.po  (+5 more)
replace/: gtk4-build.wrap
src/: Adwaita.css  README.md  corrupt.c  corrupt.h  gears-menu.ui  main.c  meson.build  raider-add-file.c  raider-add-file.h  raider-application.c  raider-application.h  raider-file-list.c  raider-file-list.h  raider-file-row.blp  raider-file-row.c  raider-file-row.h  raider-file-row.ui  raider-file-row.ui~  raider-pass-data.h  raider-preferences.blp  raider-preferences.c  raider-preferences.h  raider-preferences.ui  raider-preferences.ui~  raider-progress-icon.c  raider-progress-icon.h  raider-progress-info-popover.blp  raider-progress-info-popover.c  raider-progress-info-popover.h  raider-progress-info-popover.ui  raider-progress-paintable.c  raider-progress-paintable.h  raider-rd-popover.blp  raider-rd-popover.c  raider-rd-popover.h  raider-shortcuts.blp  raider-shortcuts.ui  raider-shred-backend.c  raider-shred-backend.h  raider-shred-file.c  (+14 more)
src/theme/: Adwaita.css  meson.build  theme.gresource.xml
subprojects/: adwaita-build.wrap  blueprint-compiler.wrap  gtk4.wrap  libadwaita-1.wrap
subprojects/adwaita/: meson.build
subprojects/gtk4/: meson.build
subprojects/secure-delete/: meson.build
subprojects/secure-delete/include/: meson.build
subprojects/secure-delete/src/: config1.h  meson.build  sdel-lib.c
