gnome.yelp('file-roller',
  sources : [
    'archive-create.page',
    'archive-edit.page',
    'archive-extract.page',
    'archive-extract-advanced-options.page',
    'archive-open.page',
    'archive-view.page',
    'index.page',
    'introduction.page',
    'legal.xml',
    'keyboard-shortcuts.page',
    'password-protection.page',
    'supported-formats.page',
    'test-integrity.page',
    'troubleshooting-archive-open.page',
    'troubleshooting-password.page'
  ],
  media : [
    'figures/org.gnome.ArchiveManager.svg'
  ]
)
