gnome.yelp('raider',
  sources : [
    'index.page',
    'introduction.page',
    'legal.xml',
    'load-file.page',
    'shred-file.page',
    'troubleshooting-shredding.page',
    'configuring-basic-options.page',
    'configuring-advanced-options.page'
  ],
  media : [
    'figures/com.github.ADBeveridge.Raider.svg'
  ]
)
